2020-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve wide subtraction.

2020-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve Rabbit negation.

2020-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve register shuffling.

2020-10-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Improve left shift.

2020-10-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3126.c:
	  Fix bug #3126.

2020-10-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve register-to-stack copy.
	* sim/ucsim/z80.src/z80mac.h,
	  sim/ucsim/z80.src/inst_r2k.cc:
	  Fix handling of offset in sp-relative addressing.

2020-10-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a z80 --reserve-regs-iy regression test failure.

2020-10-04 Philipp Klaus Krause <pkk AT spth.de>

	* sdccconf_in.h:
	  Regenerated file via autoheader to pick up r2ka port.

2020-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* Makefile.common.in:
	  Fix bug #3122.
	* src/z80/gen.c:
	  Improve use of ld d(ix), hl and ld hl, d(ix) for Rabbits.

2020-09-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix use of mul for 16-bit multiplication by constant for r2k vs. r2ka.
	* support/scripts/sdcc.nsi:
	  Fix r2ka library Windows installation.

2020-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* Makefile.in,
	  configure,
	  configure.ac,
	  device/lib/Makefile.in,
	  device/lib/r2ka,
	  device/lib/atomic_flag_clear.c,
	  device/include/Makefile.in,
	  device/include/*.h
	  src/SDCCmain.c,
	  src/port.h,
	  src/z80/main.c,
	  src/z80/z80.h,
	  support/regression/Makefile.in,
	  support/regression/fwk/include/testfwk.h,
	  support/regression/ports/ucr2ka,
	  support/regression/tests/*.c,
	  doc/sdccman.lyx,
	  r2ka port to better support Rabbit 2000A, 2000B, 2000C, 3000. RFE #709.

2020-09-27 Philipp Klaus Krause <pkk AT spth.de>
